openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-golf
  labels:
    app: my-golf
