openshift/05-capture-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capture
  labels:
    app: my-golf
    component: capture
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-golf
      component: capture
  template:
    metadata:
      labels:
        app: my-golf
        component: capture
    spec:
      serviceAccountName: capture
      containers:
        - name: capture
          image: quay.io/calopezb/my-golf-capture:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
