openshift/03-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: my-golf
    component: db
spec:
  selector:
    app: my-golf
    component: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
