openshift/04-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: my-golf
    component: api
spec:
  selector:
    app: my-golf
    component: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
