openshift/05-capture-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capture
  labels:
    app: my-golf
    component: capture
spec:
  selector:
    app: my-golf
    component: capture
  ports:
    - name: http
      port: 80
      targetPort: http
