openshift/05-capture-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: capture
  labels:
    app: my-golf
    component: capture
spec:
  to:
    kind: Service
    name: capture
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
