openshift/06-stats-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: stats
  labels:
    app: my-golf
    component: stats
spec:
  to:
    kind: Service
    name: stats
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
